mono repo with micro frontend

--- a/micro-frontend/header/src/styles/globals.css
+++ b/micro-frontend/header/src/styles/globals.css
@@ -7,17 +7,23 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer components{
+  .header{
+    @apply p-10 text-red-400
+  }
 }
 
 @layer utilities {
